--- a/NetDoc.csproj
+++ b/NetDoc.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net472</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Mono.Cecil" Version="0.11.1" />
+  </ItemGroup>
+
 </Project>
