--- a/NetDoc.csproj
+++ b/NetDoc.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -8,7 +8,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Build" Version="16.4.0" />
     <PackageReference Include="Microsoft.Build.Tasks.Core" Version="16.4.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="2.0.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.4.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.4.0" />
     <PackageReference Include="Mono.Cecil" Version="0.11.1" />
   </ItemGroup>
 
