--- a/NetDoc.csproj
+++ b/NetDoc.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.4.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.4.0" />
     <PackageReference Include="Mono.Cecil" Version="0.11.1" />
+    <PackageReference Include="NUnit" Version="3.5.0" />
   </ItemGroup>
 
 </Project>
